--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h1{
     display: flex;
     flex-direction: column;
     background-color: rgb(121, 121, 121);
-    width: 200px;
+    width: 250px;
     height: 200px;
     margin-inline: auto;
     border: solid 4px black;
@@ -61,18 +61,25 @@ h1{
     display: flex;
     flex-direction: column;
 }
+.btn-column_2{
+    width: 100%;
+    margin-top: 29px;
+}
 
 .btn{
     margin: 2px;
     height: 25px;
     width: 25px;
     font-size: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-color: #ffffffd0;
     border: none;
     box-shadow: 0 0 2px;
+}
+
+#btnCE, #btnP{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn:active{
